--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -53,6 +53,12 @@
           </li>
 
         <% end %>
+        
+        <%= form_tag root_path, method:"get" do %>
+          <%= label_tag(:search, "Movie to search: ") %>
+          <%= text_field_tag :search, params[:search] %>
+          <%= submit_tag("Search", name:nil) %>
+        <% end %>
 
       </ul>
     </div>
